# projeto_termax

./: App.js  TODO  app.json  build.gradle.kts  formattedTranslations.js  package-lock.json  package.json  react-native.config.js  textExtracted.txt
android/: build.gradle  gradle.properties  settings.gradle
android/app/: CMakeLists.txt  build.gradle  google-services.json  lint-baseline.xml  my-release-key.jks
android/app/src/debug/java/com/projeto_termax/: ReactNativeFlipper.java
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/maxsk_ltda/termax/: MainActivity.java  MainApplication.java
android/app/src/main/res/values/: strings.xml
android/app/src/main/res/xml/: backup_rules.xml  data_extraction_rules.xml
android/app/src/release/java/com/projeto_termax/: ReactNativeFlipper.java
ios/: Podfile
ios/projeto_termax/: AppDelegate.mm  Info.plist  LaunchScreen.storyboard
ios/projeto_termax.xcodeproj/: project.pbxproj
ios/projeto_termaxTests/: projeto_termaxTests.m
src/assets/: colors.js
src/components/: AnotherButtonMetade.js  ButtonEdite.js  ColectionListItem.js  CollectionImage.js  CollectionPart.js  DeleteButton.js  Loading.js  LogoutButton.js  MeuButton.js  MeuButtonCidade.js  MeuButtonMetade.js  RewardButton.js  SearchBar.js  Texto.js  Voltar.js  VoltarWithoutColor.js
src/context/: ApiProvider.js  AuthUserProvider.js  ChatProvider.js  CoinsExpProvider.js  CollectionsProvider.js  GameProvider.js  LanguageProvider.js  ProfileProvider.js
src/db/: words.js
src/navigation/: Navigator.js  index.js
teste/: teste.doc
(+93 files in other folders)
